[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Walls.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 433.5, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 261.25 )

[sub_resource type="RectangleShape2D" id=2]

[node name="Walls" type="Node"]
script = ExtResource( 1 )

[node name="TopWall" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
position = Vector2( 434, -11 )
shape = SubResource( 1 )

[node name="BottomWall" type="Area2D" parent="."]
position = Vector2( 0, 545 )
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
position = Vector2( 434, -11 )
shape = SubResource( 1 )

[node name="LeftGoal" type="Area2D" parent="."]
position = Vector2( 150, 262 )
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftGoal"]
shape = SubResource( 3 )

[node name="RightGoal" type="Area2D" parent="."]
position = Vector2( 708, 262 )
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightGoal"]
shape = SubResource( 3 )

[node name="TopLeftPlayerWall" type="StaticBody2D" parent="."]
position = Vector2( 200, 10 )
collision_layer = 2
collision_mask = 4
__meta__ = {
"_editor_description_": "Stop left player from reaching the top of the screen"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopLeftPlayerWall"]
shape = SubResource( 2 )

[node name="BottomLeftPlayerWall" type="StaticBody2D" parent="."]
position = Vector2( 200, 515 )
collision_layer = 2
collision_mask = 4
__meta__ = {
"_editor_description_": "Stop left player from reaching the bottom of the screen"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomLeftPlayerWall"]
position = Vector2( 0, -2 )
shape = SubResource( 2 )

[node name="TopRightPlayerWall" type="StaticBody2D" parent="."]
position = Vector2( 658, 10 )
collision_layer = 2
collision_mask = 4
__meta__ = {
"_editor_description_": "Stop right player from reaching the top of the screen"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopRightPlayerWall"]
position = Vector2( 1, 1 )
shape = SubResource( 2 )

[node name="BottomRightPlayerWall" type="StaticBody2D" parent="."]
position = Vector2( 658, 515 )
collision_layer = 2
collision_mask = 4
__meta__ = {
"_editor_description_": "Stop right player from reaching the bottom of the screen"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomRightPlayerWall"]
position = Vector2( 1, -2 )
shape = SubResource( 2 )

[connection signal="area_entered" from="TopWall" to="." method="_on_TopWall_area_entered"]
[connection signal="area_entered" from="BottomWall" to="." method="_on_BottomWall_area_entered"]
[connection signal="area_entered" from="LeftGoal" to="." method="_on_LeftGoal_area_entered"]
[connection signal="area_entered" from="RightGoal" to="." method="_on_RightGoal_area_entered"]
